# MESS

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  environment.yml  meta.yaml  test_messtools.py
.circleci/: config.yml
.github/workflows/: build.yml  static-build.yml
debug/: build.sh  fake-install.sh  install-conda.sh
docs/: index.rst
examples/: mess.inp  messabs.inp  messpf.inp  messsym.inp
manuals/: manual_4_23_16.doc
src/: abstraction.cc  cool.cc  gumbo.cc  mess_driver.cc  mess_mpi.cc  mess_test.cc  messtools.cc  model.hh  molpro_sampling.cc  mpi_graph_test.cc  partition_function.cc  symmetry_number.cc
src/extra/: crossrate_driver.cc  graph_test.cc  harm_expansion.cc  harm_fit.cc  lr_driver.cc  lr_test.cc  mc_test.cc  molpro_sampling.cc  mpi_graph_test.cc  multirotor_test.cc  roaming.cc  sampling.cc  symmetry_number.cc  test_det.cc  test_eigen.cc  test_model.cc  test_perm.cc  thermo_driver.cc  zopt_driver.cc
src/libmess/: _Makefile  abstraction.cc  array.hh  atom.cc  atom.hh  auto_comm.hh  auto_mess.cc  auto_mess_mpi.cc  bf_orig.cc  blas.h  chem.cc  chem.hh  comm.cc  comm.hh  configuration.cc  configuration.hh  cool.cc  coord.cc  coord.hh  crossrate.cc  crossrate.hh  crossrate_driver.cc  d3.cc  d3.hh  dd_test.cc  divsur.cc  divsur.hh  dynamic.cc  dynamic.hh  dynlib.cc  dynlib.hh  error.hh  fourier.hh  graph.cc  graph.hh  graph_common.cc  graph_common.hh  graph_include.cc  graph_mpi.cc  graph_mpi.hh  (+125 more)
src/libmess/extra/: fourier.hh  graph.hh  graph_mpi.hh  graph_mpi1.hh  harding.cc  harding.hh  harm_pot.cc  harm_pot.hh  harmonic.cc  harmonic.hh  lr.cc  lr.hh  model.cc.umbrella  model.hh.umbrella  molpro.cc  molpro.hh  polynom.cc  polynom.hh  potex.hh  quaternion.cc  quaternion.hh  thermo.cc  thermo.hh  thermo_poly.hh  vtst.hh
static/: CONDA_BUILD.md  README.md  pixi.toml  recipe.yaml
